--- a/config/freematch_cifar10_40_0.yaml
+++ b/config/freematch_cifar10_40_0.yaml
@@ -13,10 +13,10 @@ DATASET:
   PREPARE: False
   DIR: './data_download'
   NAME: 'cifar10'
-  NUM_LABELED: 250
+  NUM_LABELED: 40
   NUM_CLASSES: 10
   NUM_WORKERS: 4
-  CONVERT_ONE_HOT: True
+  CONVERT_ONE_HOT: False
   IMG_SIZE: 32
   URATIO: 7
   TRAIN_BATCH_SIZE: 64
@@ -45,12 +45,12 @@ OPTIMIZER:
 TRAINER:
 
   SAT_EMA: 0.999
-  AMP_ENABLED: False
+  AMP_ENABLED: True
   NUM_WARMUP_ITERS: 0
   NUM_TRAIN_ITERS: 1048576 # 2^20
   NUM_EVAL_ITERS: 5120
   NUM_LOG_ITERS: 512
-  USE_HARD_LABELS: True
+  USE_HARD_LABELS: False
   EMA_VAL: 0.999
   SOFT_TEMP: 0.5
   ULB_LOSS_RATIO: 1.0
