Completed training and eval code. Tested for saving and loading

--- a/config/freematch_cifar10_40_0.yaml
+++ b/config/freematch_cifar10_40_0.yaml
@@ -1,26 +1,26 @@
 RUN_NAME: 'freematch_cifar10_40'
-OUTPUT_DIR: './model_ckpt'
-CONT_TRAIN: False
-RESUME: ''
+OUTPUT_DIR: 'model_ckpt'
+CONT_TRAIN: True
+RESUME: 'logs/freematch_cifar10_40/model_ckpt/last_checkpoint.pth'
 SEED: -1
-LOG_DIR: './logs'
-USE_CUDA: False
+LOG_DIR: 'logs'
+USE_CUDA: True
 USE_TB: True
 TB_DIR: 'tensorboard_runs/cifar_10_40_run_0'
 PLOT_CURVES: True
 
 DATASET:
   PREPARE: False
-  DIR: './data_download'
+  DIR: 'data_download'
   NAME: 'cifar10'
   NUM_LABELED: 40
   NUM_CLASSES: 10
-  NUM_WORKERS: 4
+  NUM_WORKERS: 8
   CONVERT_ONE_HOT: False
   IMG_SIZE: 32
   URATIO: 7
   TRAIN_BATCH_SIZE: 64
-  TEST_BATCH_SIZE: 256
+  TEST_BATCH_SIZE: 512
   CROP_RATIO: 0.875
   PIXEL_MEAN: [0.485, 0.456, 0.406]
   PIXEL_STD: [0.229, 0.224, 0.225]
@@ -45,11 +45,11 @@ OPTIMIZER:
 TRAINER:
 
   SAT_EMA: 0.999
-  AMP_ENABLED: True
+  AMP_ENABLED: False
   NUM_WARMUP_ITERS: 0
   NUM_TRAIN_ITERS: 1048576 # 2^20
-  NUM_EVAL_ITERS: 5120
-  NUM_LOG_ITERS: 512
+  NUM_EVAL_ITERS: 4
+  NUM_LOG_ITERS: 4
   USE_HARD_LABELS: False
   EMA_VAL: 0.999
   SOFT_TEMP: 0.5
