training slow: fixing the bug v1

--- a/config/freematch_cifar10_40_0.yaml
+++ b/config/freematch_cifar10_40_0.yaml
@@ -1,8 +1,8 @@
 RUN_NAME: 'freematch_cifar10_40'
 OUTPUT_DIR: 'model_ckpt'
-CONT_TRAIN: True
+CONT_TRAIN: False
 RESUME: 'logs/freematch_cifar10_40/model_ckpt/last_checkpoint.pth'
-SEED: -1
+SEED: 0
 LOG_DIR: 'logs'
 USE_CUDA: True
 USE_TB: True
@@ -15,7 +15,7 @@ DATASET:
   NAME: 'cifar10'
   NUM_LABELED: 40
   NUM_CLASSES: 10
-  NUM_WORKERS: 8
+  NUM_WORKERS: 4
   CONVERT_ONE_HOT: False
   IMG_SIZE: 32
   URATIO: 7
@@ -45,14 +45,14 @@ OPTIMIZER:
 TRAINER:
 
   SAT_EMA: 0.999
-  AMP_ENABLED: False
+  AMP_ENABLED: True
   NUM_WARMUP_ITERS: 0
   NUM_TRAIN_ITERS: 1048576 # 2^20
-  NUM_EVAL_ITERS: 4
-  NUM_LOG_ITERS: 4
+  NUM_EVAL_ITERS: 512
+  NUM_LOG_ITERS: 64
   USE_HARD_LABELS: False
   EMA_VAL: 0.999
   SOFT_TEMP: 0.5
   ULB_LOSS_RATIO: 1.0
-  ENT_LOSS_RATIO: 0.1
+  ENT_LOSS_RATIO: 0.01
 
