--- a/config/freematch_cifar10_40_0.yaml
+++ b/config/freematch_cifar10_40_0.yaml
@@ -2,12 +2,13 @@ RUN_NAME: 'freematch_cifar10_40'
 OUTPUT_DIR: 'model_ckpt'
 CONT_TRAIN: False
 RESUME: 'logs/freematch_cifar10_40/model_ckpt/last_checkpoint.pth'
-SEED: 0
+SEED: -1
 LOG_DIR: 'logs'
 USE_CUDA: True
 USE_TB: True
 TB_DIR: 'tensorboard_runs/cifar_10_40_run_0'
 PLOT_CURVES: True
+VALIDATE_ONLY: False
 
 DATASET:
   PREPARE: False
