--- a/enviornment.yml
+++ b/enviornment.yml
@@ -1,313 +1,10 @@
-name: freematch-reproduction
+name: base
 channels:
-  - file:///tmp/conda-pkgs
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - anyio=3.6.2=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py37h540881e_2
-  - attrs=22.2.0=pyh71513ae_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.2=pyha770c72_0
-  - bleach=6.0.0=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py37h540881e_1004
-  - ca-certificates=2022.12.7=ha878542_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py37h43b0acd_1
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - conda=22.9.0=py37h89c1867_1
-  - conda-package-handling=2.0.2=pyh38be061_0
-  - conda-package-streaming=0.7.0=pyhd8ed1ab_1
-  - cryptography=38.0.2=py37h5994e8b_1
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dlenv-pytorch-1-13-gpu=1.0.20230310=py37h003b471_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - flit-core=3.8.0=pyhd8ed1ab_0
-  - icu=70.1=h27087fc_0
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib_resources=5.12.0=pyhd8ed1ab_0
-  - ipykernel=6.16.2=pyh210e3f2_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jsonschema=4.17.3=pyhd8ed1ab_0
-  - jupyter_client=7.4.9=pyhd8ed1ab_0
-  - jupyter_core=4.11.1=py37h89c1867_0
-  - jupyter_server=1.23.4=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgomp=12.2.0=h65d4601_19
-  - libnsl=2.0.0=h7f98852_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.40.0=h753d276_0
-  - libstdcxx-ng=12.2.0=h46fd767_19
-  - libuv=1.44.2=h166bdaf_0
-  - libzlib=1.2.13=h166bdaf_4
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=2.0.5=pyhd8ed1ab_0
-  - nb_conda=2.2.1=unix_6
-  - nb_conda_kernels=2.3.1=py37h89c1867_1
-  - nbclassic=0.5.3=pyhb4ecaf3_3
-  - nbconvert=7.2.9=pyhd8ed1ab_0
-  - nbconvert-core=7.2.9=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.2.9=pyhd8ed1ab_0
-  - nbformat=5.7.3=pyhd8ed1ab_0
-  - ncurses=6.3=h27087fc_1
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - nodejs=18.13.0=h8d033a5_0
-  - notebook=6.5.3=pyha770c72_0
-  - notebook-shim=0.2.2=pyhd8ed1ab_0
-  - openssl=3.0.8=h0b41bf4_0
-  - pandoc=2.19.2=h32600fe_2
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pip=23.0.1=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - prometheus_client=0.16.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.38=pyha770c72_0
-  - psutil=5.9.3=py37h540881e_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pycosat=0.6.4=py37h540881e_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pyopenssl=23.0.0=pyhd8ed1ab_0
-  - pysocks=1.7.1=py37h89c1867_5
-  - python=3.7.12=hf930737_100_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
-  - python_abi=3.7=3_cp37m
-  - readline=8.1.2=h0f457ee_0
-  - requests=2.28.2=pyhd8ed1ab_0
-  - ruamel_yaml=0.15.80=py37h540881e_1007
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=67.6.0=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - sqlite=3.40.0=h4ff8645_0
-  - terminado=0.17.1=pyh41d4057_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.2=py37h540881e_0
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing_extensions=4.4.0=pyha770c72_0
-  - urllib3=1.26.14=pyhd8ed1ab_0
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - websocket-client=1.5.1=pyhd8ed1ab_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h166bdaf_4
-  - zstandard=0.18.0=py37h540881e_0
-  - pip:
-    - absl-py==1.4.0
-    - aiohttp==3.8.4
-    - aiohttp-cors==0.7.0
-    - aiorwlock==1.3.0
-    - aiosignal==1.3.1
-    - ansiwrap==0.8.4
-    - async-timeout==4.0.2
-    - asynctest==0.13.0
-    - babel==2.12.1
-    - backoff==2.2.1
-    - beatrix-jupyterlab==2023.36.165431
-    - blessed==1.20.0
-    - cachetools==5.3.0
-    - click==8.1.3
-    - cloud-tpu-client==0.10
-    - cloudpickle==2.2.1
-    - colorama==0.4.6
-    - colorful==0.5.5
-    - cycler==0.11.0
-    - cython==0.29.33
-    - db-dtypes==1.0.5
-    - debugpy==1.6.6
-    - deprecated==1.2.13
-    - distlib==0.3.6
-    - dm-tree==0.1.8
-    - docker==6.0.1
-    - fastapi==0.93.0
-    - filelock==3.9.0
-    - fonttools==4.38.0
-    - frozenlist==1.3.3
-    - fsspec==2023.1.0
-    - gcsfs==2023.1.0
-    - gitdb==4.0.10
-    - gitpython==3.1.31
-    - google-api-core==1.34.0
-    - google-api-python-client==1.8.0
-    - google-auth==2.16.2
-    - google-auth-httplib2==0.1.0
-    - google-auth-oauthlib==0.4.6
-    - google-cloud-aiplatform==1.22.1
-    - google-cloud-artifact-registry==1.8.0
-    - google-cloud-bigquery==3.6.0
-    - google-cloud-bigquery-storage==2.19.0
-    - google-cloud-core==2.3.2
-    - google-cloud-datastore==1.15.5
-    - google-cloud-language==2.9.0
-    - google-cloud-monitoring==2.14.1
-    - google-cloud-resource-manager==1.9.0
-    - google-cloud-storage==2.7.0
-    - google-crc32c==1.5.0
-    - google-resumable-media==2.4.1
-    - googleapis-common-protos==1.58.0
-    - gpustat==1.0.0
-    - greenlet==2.0.2
-    - grpc-google-iam-v1==0.12.6
-    - grpcio==1.51.3
-    - grpcio-status==1.48.2
-    - gymnasium==0.26.3
-    - gymnasium-notices==0.0.1
-    - h11==0.14.0
-    - htmlmin==0.1.12
-    - httplib2==0.21.0
-    - imagehash==4.3.1
-    - imageio==2.26.0
-    - importlib-metadata==6.0.0
-    - ipython==7.34.0
-    - ipython-genutils==0.2.0
-    - ipython-sql==0.5.0
-    - ipywidgets==8.0.4
-    - jaraco-classes==3.2.3
-    - jeepney==0.8.0
-    - joblib==1.2.0
-    - json5==0.9.11
-    - jupyter-core==4.12.0
-    - jupyter-http-over-ws==0.0.8
-    - jupyter-server==1.23.6
-    - jupyter-server-mathjax==0.2.6
-    - jupyter-server-proxy==3.2.2
-    - jupyterlab==3.4.8
-    - jupyterlab-git==0.41.0
-    - jupyterlab-server==2.20.0
-    - jupyterlab-widgets==3.0.5
-    - jupytext==1.14.5
-    - keyring==23.13.1
-    - keyrings-google-artifactregistry-auth==1.1.2
-    - kiwisolver==1.4.4
-    - kubernetes==26.1.0
-    - llvmlite==0.39.1
-    - lz4==4.3.2
-    - markdown==3.4.1
-    - markdown-it-py==2.2.0
-    - markupsafe==2.1.2
-    - matplotlib==3.5.3
-    - mccabe==0.6.1
-    - mdit-py-plugins==0.3.5
-    - mdurl==0.1.2
-    - more-itertools==9.1.0
-    - msgpack==1.0.5
-    - multidict==6.0.4
-    - multimethod==1.9.1
-    - nbclient==0.7.2
-    - nbdime==3.1.1
-    - networkx==2.6.3
-    - notebook-executor==0.2
-    - numba==0.56.4
-    - numpy==1.21.6
-    - nvidia-cublas-cu11==11.10.3.66
-    - nvidia-cuda-nvrtc-cu11==11.7.99
-    - nvidia-cuda-runtime-cu11==11.7.99
-    - nvidia-cudnn-cu11==8.5.0.96
-    - nvidia-ml-py==11.495.46
-    - oauth2client==4.1.3
-    - oauthlib==3.2.2
-    - opencensus==0.11.1
-    - opencensus-context==0.1.3
-    - opentelemetry-api==1.16.0
-    - opentelemetry-exporter-otlp==1.16.0
-    - opentelemetry-exporter-otlp-proto-grpc==1.16.0
-    - opentelemetry-exporter-otlp-proto-http==1.16.0
-    - opentelemetry-proto==1.16.0
-    - opentelemetry-sdk==1.16.0
-    - opentelemetry-semantic-conventions==0.37b0
-    - packaging==21.3
-    - pandas==1.3.5
-    - pandas-profiling==3.6.6
-    - papermill==2.4.0
-    - patsy==0.5.3
-    - phik==0.12.3
-    - pillow==9.4.0
-    - platformdirs==3.1.0
-    - plotly==5.13.1
-    - pluggy==1.0.0
-    - prettytable==3.6.0
-    - proto-plus==1.22.2
-    - protobuf==3.20.3
-    - py-spy==0.3.14
-    - pyarrow==11.0.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pydantic==1.10.6
-    - pyjwt==2.6.0
-    - pyparsing==3.0.9
-    - pyrsistent==0.19.3
-    - pytz==2022.7.1
-    - pywavelets==1.3.0
-    - pyyaml==6.0
-    - pyzmq==25.0.0
-    - ray==2.3.0
-    - ray-cpp==2.3.0
-    - requests-oauthlib==1.3.1
-    - retrying==1.3.4
-    - rich==13.3.2
-    - scikit-image==0.19.3
-    - scikit-learn==1.0.2
-    - scipy==1.7.3
-    - seaborn==0.12.2
-    - secretstorage==3.3.3
-    - shapely==1.8.5.post1
-    - simpervisor==0.4
-    - sklearn==0.0.post1
-    - smart-open==6.3.0
-    - smmap==5.0.0
-    - soupsieve==2.4
-    - sqlalchemy==2.0.5.post1
-    - sqlparse==0.4.3
-    - starlette==0.25.0
-    - statsmodels==0.13.5
-    - tabulate==0.9.0
-    - tangled-up-in-unicode==0.2.0
-    - tenacity==8.2.2
-    - tensorboard==2.11.2
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - tensorboardx==2.6
-    - textwrap3==0.9.2
-    - threadpoolctl==3.1.0
-    - tifffile==2021.11.2
-    - toml==0.10.2
-    - tomli==1.2.3
-    - torch==1.13.1
-    - torch-xla==1.13
-    - torchvision==0.14.1
-    - tqdm==4.64.1
-    - typed-ast==1.5.4
-    - typeguard==2.13.3
-    - typer==0.7.0
-    - typing-extensions==4.5.0
-    - uritemplate==3.0.1
-    - uvicorn==0.21.0
-    - virtualenv==20.20.0
-    - visions==0.7.5
-    - webencodings==0.5.1
-    - werkzeug==2.2.3
-    - widgetsnbextension==4.0.5
-    - wrapt==1.15.0
-    - yacs==0.1.8
-    - yarl==1.8.2
-    - ydata-profiling==4.1.0
+  - conda
+  - python=3.7
+  - dlenv-base
+  - dlenv-pytorch-1-10-gpu
 prefix: /opt/conda
